Inconsistent Spacing when Hiding Fields for Complex Types-fix #2755

--- a/canvas_modules/common-canvas/src/common-properties/controls/controls.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/controls.scss
@@ -52,4 +52,7 @@
 	&.hide {
 		display: none;
 	}
-}
+	&:not(:has(:not(.cds--layer-two))) {
+		padding-bottom: 0; // Removes bottom padding when only the Carbon wrapper is present without actual control.
+	}
+	}
